# text_compare

./: .gitignore  README.md  create_genre_stats.py  pyproject.toml  requirements.txt
app/: compute_features.py  load_data.py  main.py
data/processed/: genre_stats.pkl
data/raw/amalgum/: .gitignore  get_academic.py
data/raw/amalgum/lib/dplp_plusplus/: main.py
src/text_compare/: compute_stats.py  download_data.py  metrics.py
